--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dream-DL</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <%- include('../components/head') %>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header class="text-center">
+      <h1>
+        Dream-DL
+      </h1>
+      <h2>
+        Youtubeの動画を無料でダウンロードできるツール
+      </h2>
+    </header>
   </body>
 </html>
