--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -12,7 +12,7 @@
         <%= err.message %>
       </h2>
     </header>
-    <main>
+    <main class="main">
       <p>もうしわけございません。エラーが発生しました。</p>
       <a href="/">トップページへ</a>
     </main>
