--- a/views/pages/preview.ejs
+++ b/views/pages/preview.ejs
@@ -11,8 +11,10 @@
       </h1>
     </header>
     <main class="main">
-      <h3><%= songData.Title %></h3>
-      <h4><%= songData.Artist %></h4>
+      <div class="title-box">
+        <h3><%= songData.Title %></h3>
+        <h4><%= songData.Artist %></h4>
+      </div>
       <form action="/download" method="post" class="mb-3">
         <button type="submit" class="btn btn-primary">
           Download
