--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,3 +2,14 @@
   margin: 0 auto;
   width: 90%;
 }
+
+.cute-ball {
+  position: fixed;
+  top: -100px;
+  right: -100px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: red;
+  z-index: -1;
+}
