--- a/views/pages/preview.ejs
+++ b/views/pages/preview.ejs
@@ -12,16 +12,22 @@
     </header>
     <main class="main">
       <div class="title-box">
-        <h3><%= songData.Title %></h3>
-        <h4><%= songData.Artist %></h4>
+        <form action="/download" method="post" class="mb-3">
+          <div class="mb-3">
+            <label for="songTitle" class="form-label">曲のタイトル</label>
+            <input type="text" class="form-control" id="songTitle" value="<%= songData.Title %>" placeholder="<%= songData.Title %>" name="title" required>
+          </div>
+          <div class="mb-3">
+            <label for="songArtist" class="form-label">アーティスト</label>
+            <input type="text" class="form-control" id="songArtist" value="<%= songData.Artist %>" placeholder="<%= songData.Artist %>" name="artist" required>
+          </div>
+          <label for="volumeRange" class="form-label">音量</label>
+          <input type="range" class="form-range" min="0" max="1" step="0.05" id="volumeRange" name="volume">
+          <button type="submit" class="btn btn-primary">
+            Download
+          </button>
+        </form>
       </div>
-      <form action="/download" method="post" class="mb-3">
-        <label for="volumeRange" class="form-label">音量</label>
-        <input type="range" class="form-range" min="0" max="1" step="0.05" id="volumeRange" name="volume">
-        <button type="submit" class="btn btn-primary">
-          Download
-        </button>
-      </form>
       <a href="/" class="btn btn-outline-primary">
         Back
       </a>
